[package]
name = "lid"
version = "0.2.1"
edition = "2021"
description = "Extremely fast, small, url-friendly, and unique ID generator."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lid"
repository = "https://git.radial.gg/opus/lid"
categories = ["id"]
keywords = ["id"]

[features]
default = ["base36"]
base32 = []
base36 = []
base62 = []
easy = ["lazy_static", "spin"]

[dependencies]
rand = "0.8"

# For globally instanced LID
lazy_static = { version = "1.4", optional = true }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"], optional = true}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false