[package]
name = "lid"
version = "0.2.1"
edition = "2021"
description = "Extremely fast, customizable, and unique ID generation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/lid"
repository = "https://git.radial.gg/lily/lid"
categories = ["id"]
keywords = ["id"]

[features]
default = ["base36"]
base32 = []
base36 = []
base62 = []
easy = ["lazy_static", "spin"]
no-unsafe = []

[dependencies]
rand = "0.8"

# For globally instanced LID
lazy_static = { version = "1.4", optional = true }
spin = { version = "0.9", default-features = false, features = ["spin_mutex"], optional = true}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false